# uv-quick-tool-creator

./: .envrc  .gitignore  LICENSE  README.md  flake.nix  install-nixos.sh  main.py  pyproject.toml  update-nixos.sh  uv-quick-tool-creator.example.yaml
script-wrappers/: install-nixos  update-nixos
src/uv_quick_tool_creator/: cli.py  cli_template.py  main_template.py
